// Update composer.json

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "PrestaShop/statsproduct",
+  "name": "prestashop/statsproduct",
   "description": "PrestaShop module statsproduct",
   "homepage": "https://github.com/PrestaShop/statsproduct",
   "license": "AFL - Academic Free License (AFL 3.0)",
