--- a/composer.json
+++ b/composer.json
@@ -1,19 +1,20 @@
 {
-  "name": "prestashop/statsproduct",
-  "description": "PrestaShop module statsproduct",
-  "homepage": "https://github.com/PrestaShop/statsproduct",
-  "license": "AFL - Academic Free License (AFL 3.0)",
-  "authors": [
-    {
-      "name": "PrestaShop SA",
-      "email": "contact@prestashop.com"
-    }
-  ],
-  "require": {
-    "php": ">=5.4"
-  },
-  "config": {
-    "preferred-install": "dist"
-  },
-  "type": "prestashop-module"
+    "name": "prestashop/statsproduct",
+    "description": "PrestaShop module statsproduct",
+    "homepage": "https://github.com/PrestaShop/statsproduct",
+    "license": "AFL-3.0",
+    "authors": [
+        {
+            "name": "PrestaShop SA",
+            "email": "contact@prestashop.com"
+        }
+    ],
+    "require": {
+        "php": ">=5.4"
+    },
+    "config": {
+        "preferred-install": "dist"
+    },
+    "type": "prestashop-module",
+    "author": "PrestaShop"
 }
